# checkbox_test_project

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: config.py  env.py
migrations/versions/: 52492f9ced2a_init_tables.py  a78b38bd1d09_init_tables.py
src/: database.py  dependencies.py  main.py  models.py  settings.py
src/middlewares/: database.py
src/receipts/: enums.py  repositories.py  router.py  schemas.py  utils.py
src/users/: repositories.py  router.py  schemas.py
src/utils/: logger.py
tests/: conftest.py  docker-compose.yaml  test_receipts.py  test_users.py  utils.py
