[tool.poetry]
name = "checkbox-test-project"
version = "0.0.1"
description = "Checkbox test project"
authors = ["yeghorkikhai <yeghorkikhai@gmail.com>"]
readme = "README.md"
packages = [{include = "checkbox_test_project"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.2"
fastapi = {version = "0.100.1", extras = ["all"]}
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
asyncpg = "^0.28.0"
async-fastapi-jwt-auth = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
